...
        },
        navigationIcon = {
            if (currentBackStackEntry?.destination?.route !in baseRoute) {
                IconButton(onClick = { navController.navigateUp() }) {
                    Icon(
                        imageVector = Icons.Filled.ArrowBack,
                        contentDescription = "Back"
                    )
                }
            }
        },
        actions = {
            IconButton(onClick = { onInfoActionClick() }) {
...
